# javdesk

./: Cargo.toml  README.md  config.toml.tmp  install.sh  xiuren.body  xiuren.py  xiuren.struct
resources/: AppIcon.icns
src/: app.rs  app_state.rs  config.rs  db.rs  main.rs  proxy.rs  theme.rs
src/components/: icon.rs  mod.rs  scroll.rs
src/views/: error.rs  javdesk.rs  loading.rs  mod.rs  tab.rs
src/views/find/: mod.rs  page.rs  state.rs
src/views/find/detail/: article.rs  info.rs  mod.rs  page.rs  selector.rs
src/views/find/idle/: item.rs  mod.rs  selector.rs
src/views/home/: mod.rs  page.rs  state.rs
src/views/home/detail/: info.rs  mod.rs  selector.rs
src/views/home/idle/: item.rs  mod.rs
src/views/like/: mod.rs  state.rs
src/views/like/detail/: info.rs  mod.rs
src/views/like/idle/: item.rs  mod.rs
src/views/talk/: mod.rs  page.rs
src/views/talk/detail/: article.rs  mod.rs  page.rs  selector.rs
src/views/talk/idle/: item.rs  selector.rs
src/views/xiuren/: mod.rs  page.rs  state.rs
src/views/xiuren/detail/: info.rs  mod.rs  selector.rs
src/views/xiuren/idle/: item.rs  mod.rs  selector.rs
