[package]
name = "javdesk"
version = "1.0.1"
edition = "2021"
description = "A desktop application for javbus."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
async-std = { version = "1.12.0", features = ["tokio1"] }
env_logger = "0.11.3"
gpui = { git = "https://github.com/zed-industries/zed" }
image = "0.25.0"
isahc = "1.7.2"
jemallocator = "0.5.4"
log = "0.4.21"
reqwest = { version = "0.11.27", features = [
    "gzip",
    "brotli",
    "deflate",
    "json",
] }
rusqlite = "0.31.0"
rust-embed = "8.3.0"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
whoami = "1.5.1"

[package.metadata.bundle]
name = "Javdesk"
identifier = "github.jane-212.javdesk"
icon = ["resources/AppIcon.icns"]
copyright = "Copyright (c) Jane-212. All rights reserved."
category = "Medical"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
avatar = []
hide = []
